    standard output console logging differently -- 'run' target will still
    output logs to console where as 'start' target will redirect all logging
    to files (Juha Lindfors, ORCJAVA-273)
  - Support for externally packaged and distributed protocol implementations, 
    such as Z-wave (Marcus Redeker, Juha Lindfors, ORCJAVA-347, ORCJAVA-366)
    

Bug Fixes:

  - Performance fix to sensor state cache queries (Marcus Redeker)
  - Runtime performance optimization to avoid unnecessary XML 
    parsing/XPath use (ORCJAVA-190)
  - Fix for JSON REST request return values (Richard Turner, ORCJAVA-254)
  - Rework logout requests and added CORS headers (Richard Turner, ORCJAVA-255)
  - Internal API : concurrency and call control on Deployer start 
    controller calls (Juha Lindfors, ORCJAVA-179)  
  - Range and Level sensors trim the incoming values from protocol implementation
    before attempting to convert values to numbers (Eric Bariaux, ORCJAVA-261)  
  - Fix issues with installing Controller to a file system location that contained
    white spaces in path names - commonly 'Program Files' on Windows environments
    (Juha Lindfors ORCJAVA-280, ORCJAVA-263, ORCJAVA-286, Eric Bariaux ORCJAVA-311)
  - Fix a false warning in ISY-99 protocol implementation 
    (Juha Lindfors, ORCJAVA-308)
  - State sensor is more tolerant to device input trimming non-printable 
    characters -- CF, RF, zero bytes, etc.  (Juha Lindfors, ORCJAVA-324) 
  - Use locale independent string case conversions in the controller, KNX and telnet
    protocols (Juha Lindfors, ORCJAVA-332, ORCJAVA-334, ORCJAVA-335)
  - Fix a bug in telnet switch sensor handling where untrimmed return value was
    never correctly parsed to 'on' state (Juha Lindfors, ORCJAVA-326)
  - Fix a false warning in ISY-99 protocol implementation (ORCJAVA-308)
  - 1-wire: Fix NPE when owserver is not reachable (Marcus Redeker, ORCJAVA-267)
  - KNX SCENE and LEARN_SCENE commands were mixed up. Enable scene number